# node-graph

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  unit_test.yaml
docs/: requirements.txt
docs/gallery/autogen/: annotate_inputs_outputs.py  annotate_semantics.py  quick_start.py  zone.py
docs/gallery/concept/autogen/: graph_node_concept.py  node_concept.py  nodegraph_concept.py  socket_concept.py
docs/source/: collection.rst  conf.py  customize.rst  data.rst  index.rst  nodetree.rst  property.rst  quick_start.ipynb  socket.rst  yaml.rst
docs/source/_static/: showcase.blend  showcase.blend1
docs/source/_static/scripts/examples/: create_node.py  custom_node.py  my_first_nodetree.py  run_my_node.py
docs/source/concept/: collection.rst  execution.rst  index.rst  node.rst  node_graph.rst  node_group.rst  property.rst  socket.rst  workflow_authoring.rst
docs/source/concepts/: index.rst  node.rst  node_group.rst
docs/source/html/: first_workflow.html
docs/source/install/: docker.rst  index.rst  system.rst
docs/source/node/: bash_node.rst  builtin_node.rst  control_flow_graph.rst  control_node.rst  index.rst  node_concept.rst  python_list_node.rst  python_node.rst  python_operator_node.rst
node_graph/: __init__.py  analysis.py  collection.py  decorator.py  executor.py  link.py  node.py  node_graph.py  property.py  serializer.py  socket.py  utils.py  version.py
node_graph/nodes/: __init__.py  node_pool.py  test_nodes.py
node_graph/nodes/factory/: base.py  function_node.py
node_graph/orm/: mapping.py
node_graph/plugins/: test_nodes.py
node_graph/properties/: __init__.py  builtin.py  builtins.py
node_graph/sockets/: __init__.py  builtin.py  builtins.py
src/node_graph/: __init__.py  analysis.py  cli.py  collection.py  config.py  decorator.py  error_handler.py  errors.py  executor.py  graph.py  graph_io_base.py  group.py  knowledge_graph.py  link.py  manager.py  materialize.py  mixins.py  node.py  node_graph.py  node_spec.py  property.py  registry.py  semantics.py  serializer.py  socket.py  socket_meta.py  socket_spec.py  spec.py  spec_node.py  task.py  task_spec.py  utils.py  version.py
src/node_graph/engine/: base.py  direct.py  jobflow.py  local.py  parsl.py  prefect.py  provenance.py  pyiron.py  redun.py  utils.py
src/node_graph/executors/: tests.py
src/node_graph/knowledge/: __init__.py  graph.py  visualization.py
src/node_graph/nodes/: builtins.py  function_node.py  node_pool.py  subgraph_node.py  test_nodes.py  tests.py  utils.py
src/node_graph/nodes/factory/: __init__.py  base.py  function_node.py  nodegraph_node.py
src/node_graph/orm/: mapping.py
src/node_graph/properties/: __init__.py  builtins.py
src/node_graph/sockets/: __init__.py  builtins.py
src/node_graph/tasks/: __init__.py  builtins.py  function_task.py  subgraph_task.py  task_pool.py  tests.py
src/node_graph/utils/: __init__.py  function.py  graph.py  json_utils.py
tests/: conftest.py  debug_tests.py  test_analysis.py  test_annotation.py  test_builtin_nodes.py  test_collection.py  test_ctx.py  test_decorator.py  test_engine_direct.py  test_engine_jobflow.py  test_engine_local.py  test_engine_parsl.py  test_engine_prefect.py  test_engine_pyiron.py  test_engine_redun.py  test_error_handler.py  test_executor.py  test_graph.py  test_graph_builder.py  test_graph_level_io.py  test_graph_node.py  test_graph_task.py  test_group.py  test_hooks.py  test_knowledge_graph.py  test_link.py  test_manager.py  test_meta_nodes.py  test_node.py  test_node_handle.py  test_node_spec.py  test_nodegraph.py  test_nodetree.py  test_pool.py  test_property.py  test_property_validation.py  test_provenance.py  test_semantics.py  test_semantics_buffer.py  test_serializer.py  (+11 more)
tests/datas/: test_yaml.yaml
tests/html/: add1.html  test_nodetree.html
