[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "node_graph"
dynamic = ["version"]  # read from node_graph/__init__.py
description = "Create node-based workflow"
authors = [{ name = "Xing Wang", email = "xingwang1991@gmail.com" }]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["graph", "workflows"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "numpy",
    "scipy",
    "cloudpickle",
    "node-graph-widget",
    "wrapt",
    "typing_extensions>=4.7; python_version < '3.11'",
    "pydantic~=2.6",
    "pyyaml",
    "rdflib>=6.0",
    "graphviz>=0.20",
    "click>=8.1",
]

[project.urls]
Documentation = "https://node-graph.readthedocs.io"
Source = "https://github.com/scinode/node-graph"


[project.optional-dependencies]
docs = [
    "sphinx_rtd_theme",
    "sphinx~=7.2",
    "nbsphinx",
]
pre-commit = [
    "pre-commit~=2.2",
    "pylint~=2.17.4",
]
tests = [
    "pytest~=7.0",
    "pytest-cov~=2.7,<2.11",
    "pytest-asyncio",
]



[project.entry-points."node_graph.task"]
"node_graph.task" = "node_graph.task:Task"
"node_graph.graph_level" = "node_graph.tasks.builtins:GraphLevelTask"
"node_graph.test_float" = "node_graph.tasks.tests:test_float"
"node_graph.test_string" = "node_graph.tasks.tests:test_string"
"node_graph.test_add" = "node_graph.tasks.tests:test_add"
"node_graph.test_enum" = "node_graph.tasks.tests:TestEnum"
"node_graph.test_enum_update" = "node_graph.tasks.tests:TestEnumUpdate"
"node_graph.while_zone" = "node_graph.tasks.builtins:While"
"node_graph.zone" = "node_graph.tasks.builtins:Zone"
"node_graph.if_zone" = "node_graph.tasks.builtins:If"

[project.entry-points."node_graph.socket"]
"node_graph.any" = "node_graph.sockets.builtins:SocketAny"
"node_graph.namespace" = "node_graph.socket:TaskSocketNamespace"
"node_graph.int" = "node_graph.sockets.builtins:SocketInt"
"node_graph.float" = "node_graph.sockets.builtins:SocketFloat"
"node_graph.string" = "node_graph.sockets.builtins:SocketString"
"node_graph.bool" = "node_graph.sockets.builtins:SocketBool"
"node_graph.base_dict" = "node_graph.sockets.builtins:SocketBaseDict"
"node_graph.base_list" = "node_graph.sockets.builtins:SocketBaseList"
"node_graph.int_vector" = "node_graph.sockets.builtins:SocketIntVector"
"node_graph.float_vector" = "node_graph.sockets.builtins:SocketFloatVector"

[project.entry-points."node_graph.property"]
"node_graph.any" = "node_graph.properties.builtins:PropertyAny"
"node_graph.int" = "node_graph.properties.builtins:PropertyInt"
"node_graph.float" = "node_graph.properties.builtins:PropertyFloat"
"node_graph.string" = "node_graph.properties.builtins:PropertyString"
"node_graph.bool" = "node_graph.properties.builtins:PropertyBool"
"node_graph.enum" = "node_graph.properties.builtins:PropertyEnum"
"node_graph.int_vector" = "node_graph.properties.builtins:PropertyIntVector"
"node_graph.float_vector" = "node_graph.properties.builtins:PropertyFloatVector"
"node_graph.bool_vector" = "node_graph.properties.builtins:PropertyBoolVector"
"node_graph.float_matrix" = "node_graph.properties.builtins:PropertyFloatMatrix"
"node_graph.base_dict" = "node_graph.properties.builtins:PropertyBaseDict"
"node_graph.base_list" = "node_graph.properties.builtins:PropertyBaseList"

[project.entry-points."node_graph.type_mapping"]
"node_graph.builtins_mapping" = "node_graph.orm.mapping:type_mapping"

[project.entry-points."node_graph.type_promotion"]
"node_graph.builtins_mapping" = "node_graph.link:TYPE_PROMOTIONS"

[project.scripts]
node-graph = "node_graph.cli:cli"
